welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value resteAB
resteAB= a%b
^lastDigit:3: error: not found: value resteAC
resteAC= a%c
^lastDigit:4: error: not found: value resteBC
resteBC= b%c
^lastDigit:6: error: not found: value resteAB
	if ((resteAB == resteAC || resteAB == resteBC) && resteBC == resteAC) return true
             ^